# CausalLLM

./: .gitignore  README.md  evaluation_results.json  graph_rag.py  ps1_extract.py  pyproject.toml  rag_evaluate.py  rag_pipeline.py  requirements.txt
PS1/text_outputs/: AAPL_10-K-Q4-2023-As-Filed.txt  Johnson-Johnson-2023-Annual-Report.txt  nvidia.txt  summaries.json
