[project]
name = "csesaproj"
version = "0.1.0"
description = "Causal Reasoning and conversation"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.2",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "pdfminer-six>=20221105",
    "pypdf2>=3.0.0",
    "python-dotenv>=1.2.1",
    "langchain-experimental>=0.0.10",
    "networkx>=3.0",
    "dotenv>=0.9.9",
    "langchain-ollama>=0.0.1",
    "tqdm>=4.67.1",
]
